src/components/layout/main-header/mainHeader.sass
.main-header
    height: 80px
    position: sticky
    top: -2px
    z-index: 4
    background-color: #121212
    // position: relative
    @include responsive_ls
        height: 100px
    .search-black
        @include size(100%, 100%)
        position: fixed
        top: 0
        left: 0
        z-index: 4
    .main-header-container
        @include flex(row, space-between, center)
        width: 90%
        height: 100%
        max-width: 100rem
        margin-left: auto
        margin-right: auto
        @include responsive_ls
            width: 75%
            justify-content: flex-start
            position: relative
        .main-header_search
            z-index: 5
            .mobile-search
                @include responsive_ls
                    display: none
            .search-box
                position: absolute
                left: 0
                top: 0
                z-index: 5
                background-color: $headerBG
                @include size(100%, 80px)
                @include flex(row, space-between, center)
                padding: 0 1.8rem
                gap: 20px
                @include responsive_ls
                    @include size(230px, 40px)
                    border-radius: 24px
                    gap: 1rem
                    padding: 0 1rem
                    position: static
                svg
                    @include size(18px, 18px)
                    path
                        fill: white
                .close-icon
                    @include responsive_ls
                        display: none
                input
                    display: flex
                    @include size(100%, 100%)
                    background-color: transparent
                    border: none
                    color: rgb(245, 245, 245)
                    font-size: .9rem
                    &:focus
                        outline: none
                    &::placeholder
                        font-size: .8rem
                        font-weight: 500
                        color: #ccccccb8
                        letter-spacing: .8px
            ul
                position: absolute
                top: 78px
                left: 0
                background-color: $headerBG
                width: 100%
                max-height: 18rem
                overflow-y: auto
                padding: .7rem 1.8rem
                @include responsive_ls
                    width: 50rem
                    border-radius: 4px
                li
                    a
                        height: 60px
                        @include flex(row, $align: center)
                        gap: 15px
                        img
                            width: 32px
                            border-radius: 4px
                        p
                            font-size: 14px
                            color: white
                            text-overflow: ellipsis
                            overflow: hidden
                            width: 80%
                            white-space: nowrap
                .search-skeleton-list
                    @keyframes pulse-bg-white
                        0%
                            background-color: #5c5c5c
                        50%
                            background-color: #484848
                        100%
                            background-color: #5c5c5c
                    a
                        img
                            animation: pulse-bg-white 1s infinite
                            width: 32px
                            border-radius: 4px
                        p
                            width: 70%
                            height: 1.3rem
                            animation: pulse-bg-white 1s infinite
                            border-radius: 4px

        .main-header-menu
            @include responsive_ls
                margin-left: 2rem
                position: relative
                width: 11.25rem
            .desktop-list_menu
                display: none
                @include responsive_lm
                    @include flex(row, $align: center)
                    li
                        a
                            display: block
                            padding: 1rem
                            color: white
                            opacity: .5
                            font-size: 0.875rem
                            letter-spacing: 0.2px
                    .active-list
                        opacity: 1
            button
                background-color: transparent
                color: white
                text-transform: capitalize
                font-size: 0.875rem
                @include flex(row, $align: center)
                @include responsive_lm
                    display: none
                svg
                    @include size(.8rem, .8rem)
                    margin-left: .3rem
                    transform: rotate(180deg)
                    transition: .3s
                .svg-active
                    transform: rotate(0deg)
                    transition: .3s
            .bottom-menu
                position: absolute
                background: rgb(18, 18, 18)
                left: 0px
                top: 100%
                padding: 27px 32px
                width: 100%

                ul
                    z-index: 11
                    li
                        a
                            display: block
                            padding: 1rem 0
                            color: white
                            opacity: .5
                            font-size: 0.875rem
                            letter-spacing: 0.2px
                        &:nth-child(2)
                            border-top: 1px solid #cccccc5e
                            border-bottom: 1px solid #cccccc5e
                    .active-list
                        opacity: 1
                @include responsive_ls
                    background: $headerBG
                    top: 2.4rem
                    padding: 10px 20px
                    border-radius: 4px
                    ul
                        li
                            border: none !important
                            a
                                padding: .5rem 0
                @include responsive_lm
                    display: none

        .basket-icon
            display: flex
            p
                display: none
                font-size: 0.875rem
                color: #cccccc75
            @include responsive_ls
                position: absolute
                right: 0.625rem
                svg
                    display: none
                p
                    display: block

.bottom-menu_black
    width: 100%
    height: 100%
    background-color: rgba(18, 18, 18, 0.522)
    position: fixed
    left: 0
    top: 0
    z-index: 3

